Bug 414075: Set the correct dead space gap value in Print Preview. Patch by Jeremy Lea <reg@openpave.org>  r+sr=roc a1.9b3=schrep